--- a/src/components/downloadButton.astro
+++ b/src/components/downloadButton.astro
@@ -3,7 +3,7 @@
 ---
 
 <div class="item button-parrot" style="--bg-color: #2c3e50">
-    <button>Download Me!
+    <button class="btn btn-success">Download Me!
       <div class="parrot"></div>
       <div class="parrot"></div>
       <div class="parrot"></div>
